# opengl-playground

./: .gitignore  CMakeLists.txt  cmakeTestStuff.txt
assets/shaders/: base.shader
include/: gameObject.hpp  gl_caller.hpp  gl_util.hpp  material.hpp  matrixUtil.hpp  mesh.hpp  renderer.hpp  shader.hpp  shaderParser.hpp  texture.hpp  vertexBufferAttribLayout.hpp
include/shaders/: base.shader
src/: gl_caller.cpp  gl_util.cpp  main.cpp  renderer.cpp  shader.cpp  shaderParser.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
